@@ -29,7 +29,7 @@
  */
 
 
-/* $Id: php_domxml.h,v 1.7 2000/02/09 20:06:23 steinm Exp $ */
+/* $Id: php_domxml.h,v 1.8 2000/02/10 15:24:13 steinm Exp $ */
 
 #ifndef _PHP_DOMXML_H
 #define _PHP_DOMXML_H
@@ -43,8 +43,8 @@ extern zend_module_entry php_domxml_module_entry;
 /* directory functions */
 extern PHP_MINIT_FUNCTION(domxml);
 extern PHP_MINFO_FUNCTION(domxml);
-PHP_FUNCTION(getdom);
-PHP_FUNCTION(getdomfile);
+PHP_FUNCTION(xmldoc);
+PHP_FUNCTION(xmldocfile);
 PHP_FUNCTION(xmltree);
 PHP_FUNCTION(domxml_newxmldoc);
 
